--- a/environment.yml
+++ b/environment.yml
@@ -161,7 +161,6 @@ dependencies:
     - cligj==0.7.2
     - cycler==0.11.0
     - fonttools==4.33.3
-    - gdal==3.4.3
     - icecream==2.1.2
     - imageio==2.19.1
     - joblib==1.1.0
@@ -172,7 +171,6 @@ dependencies:
     - pillow==9.1.0
     - pytz==2022.1
     - pywavelets==1.3.0
-    - rasterio==1.2.10
     - scikit-image==0.19.2
     - scikit-learn==1.1.0
     - seaborn==0.11.2
@@ -180,4 +178,4 @@ dependencies:
     - threadpoolctl==3.1.0
     - tifffile==2022.5.4
     - tqdm==4.64.1
-prefix: C:\Users\jchamorro\Anaconda3\envs\tf2
+prefix: C:\Users\jchamorro\anaconda3\envs\tf2
