--- a/config/config.json
+++ b/config/config.json
@@ -14,5 +14,5 @@
 	"addPastDeforestationInput": true,
 	"classes_mode": false,
 	"learning_rate": 1e-4,
-    "use_cloud_mask": true,
+    "use_cloud_mask": true
 }
