--- a/config/config.json
+++ b/config/config.json
@@ -1,24 +1,25 @@
 {
-    "training": false,
+    "training": true,
 	"inferring": true,
-	"site": "MS", 
-	"training_date": "current", 
-	"mode": "mcd", 
-	"training_times": 10,
+	"site": "MT", 
+	"training_date": "earlier", 
+	"mode": "evidential2", 
+	"training_times": 20,
 	"uncertainty_method": "pred_entropy", 
 	"loadInference": false,
 	"removePolygons": true,
 	"plotLandsat": false,
 	"plotPOI": false,
-	"training_experiment_id": 39,
+	"training_experiment_id": 42,
 	"get_multiple_metrics": false,
-	"start_repetition_id": 4,
+	"start_repetition_id": 0,
+	"end_repetition_id": 20,
 
 	"save_probabilities": false,
 	"addPastDeforestationInput": true,
 	"classes_mode": true,
 	"learning_rate": 1e-4,
-    "use_cloud_mask": false,
+    "use_cloud_mask": true,
 	"mask_out_non_biome": false,
 
 	"log_filename": "log.pkl"
