Add gc.collect() to snip plot for RAM

--- a/config/config.json
+++ b/config/config.json
@@ -1,26 +1,26 @@
 {
     "training": true,
 	"inferring": true,
-	"site": "MT", 
-	"training_date": "earlier", 
+	"site": "PI", 
+	"training_date": "current", 
 	"mode": "evidential2", 
-	"training_times": 20,
+	"training_times": 3,
 	"uncertainty_method": "pred_entropy", 
 	"loadInference": false,
 	"removePolygons": true,
 	"plotLandsat": false,
 	"plotPOI": false,
-	"training_experiment_id": 42,
+	"training_experiment_id": 46,
 	"get_multiple_metrics": false,
 	"start_repetition_id": 0,
-	"end_repetition_id": 20,
+	"end_repetition_id": 3,
 
 	"save_probabilities": false,
 	"addPastDeforestationInput": true,
 	"classes_mode": true,
 	"learning_rate": 1e-4,
-    "use_cloud_mask": true,
-	"mask_out_non_biome": false,
+    "use_cloud_mask": false,
+	"mask_out_non_biome": true,
 
 	"log_filename": "log.pkl"
 }
