--- a/config/config.json
+++ b/config/config.json
@@ -1,16 +1,16 @@
 {
     "training": true,
 	"inferring": true,
-	"site": "PI", 
+	"site": "PA", 
 	"training_date": "current", 
 	"mode": "evidential2", 
-	"training_times": 3,
+	"training_times": 10,
 	"uncertainty_method": "pred_entropy", 
 	"loadInference": false,
 	"removePolygons": true,
 	"plotLandsat": false,
 	"plotPOI": false,
-	"training_experiment_id": 46,
+	"training_experiment_id": 48,
 	"get_multiple_metrics": false,
 	"start_repetition_id": 0,
 	"end_repetition_id": 3,
